# proxy-scraper

./: README.md  config.toml  geo.db  main.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: ip_check.yml  proxy_scrape.yml
proxies/: http.txt  https.txt  socks4.txt  socks5.txt
proxies/http/: AE.txt  AF.txt  AL.txt  AM.txt  AO.txt  AR.txt  AT.txt  AU.txt  BA.txt  BD.txt  BG.txt  BO.txt  BR.txt  BY.txt  CA.txt  CH.txt  CL.txt  CN.txt  CO.txt  CR.txt  CZ.txt  DE.txt  DO.txt  DZ.txt  EC.txt  EG.txt  ES.txt  FI.txt  FR.txt  GB.txt  GE.txt  GR.txt  GT.txt  HK.txt  HN.txt  HR.txt  HU.txt  ID.txt  IE.txt  IN.txt  (+62 more)
proxies/https/: AE.txt  AF.txt  AL.txt  AM.txt  AR.txt  AT.txt  AU.txt  BA.txt  BD.txt  BE.txt  BG.txt  BO.txt  BR.txt  BW.txt  BY.txt  CA.txt  CD.txt  CH.txt  CL.txt  CN.txt  CO.txt  CR.txt  CU.txt  CY.txt  CZ.txt  DE.txt  DK.txt  DO.txt  EC.txt  EG.txt  ES.txt  FI.txt  FR.txt  GB.txt  GE.txt  GH.txt  GQ.txt  GR.txt  GT.txt  HK.txt  (+62 more)
proxies/raw/: http.txt  https.txt  socks4.txt  socks5.txt
proxies/socks4/: AF.txt  AL.txt  AM.txt  AR.txt  AT.txt  AU.txt  AZ.txt  BA.txt  BD.txt  BG.txt  BI.txt  BJ.txt  BO.txt  BR.txt  CA.txt  CD.txt  CH.txt  CL.txt  CM.txt  CN.txt  CO.txt  CR.txt  CY.txt  CZ.txt  DE.txt  DK.txt  EC.txt  ES.txt  FI.txt  FR.txt  GB.txt  GE.txt  GH.txt  GR.txt  GT.txt  HK.txt  HN.txt  HR.txt  HU.txt  ID.txt  (+61 more)
proxies/socks5/: AT.txt  AU.txt  AZ.txt  BD.txt  BG.txt  BR.txt  CA.txt  CH.txt  CN.txt  DE.txt  ES.txt  (+30 more)
proxy_scraper/: config.py  protocol.py  proxy.py  proxy_file_manager.py  proxy_validator.py  proxy_writer.py
(+20 files in other folders)
