[tool.poetry]
name = "proxy-scraper"
version = "0.1.0"
description = ""
authors = ["lalifeier <lalifeier@gmail.com>"]
readme = "README.md"
packages = [{include = "proxy_scraper"}]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.17.1"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"
mypy = "^0.991"
tox = "^4.2.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "0.20.3"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
playwright = "^1.45.0"
beautifulsoup4 = "^4.12.3"
aiodns = "^3.2.0"
aiohttp-socks = "^0.8.4"
aiofiles = "^24.1.0"
rich = "^13.7.1"
fake-useragent = "^1.5.1"
certifi = "^2024.7.4"
requests = "^2.32.3"
pycountry = "^24.6.1"
geoip2 = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "baidu"
url = "https://mirror.baidu.com/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = 'supplemental'

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120
target-version = ['py311']
